# hatch-min-requirements

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  README_CHANGES.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/hatch_min_requirements/: __init__.py  _fetch.py  grammar.peg  util.py
tests/: test_config_options.py  test_hatch_min_requirements.py  test_patch_pyproject.py  test_patch_pyproject_formatting.py
